# tingjian

./: .gitignore  app.py  hello.py  pyproject.toml  readme.md  run.py  server.py
esp32/CameraBTClassicPoster/: CameraBTClassicPoster.ino
esp32/CameraHttpPoster/: CameraHttpPoster.ino  SimpleCameraHttpPoster.ino
llm_core/: llm_core.py
templates/: index.html  login.html
utils/: log_utils.py  utils.py  yolo.py
