[project]
name = "tingjian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "flask-login>=0.6.3",
    "flask-socketio>=5.5.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-core>=0.3.29",
    "openai>=1.59.5",
    "pillow>=11.1.0",
]
